# the-random-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
src/: TODO  TODO.md  main.rs  main_tests.rs  unused_code
src/commands/: animals.rs  command_tests.rs  dev.rs  general.rs  generators.rs  helpers.rs  misc.rs  mod.rs  rand_info.rs
src/commands/random/: animals.rs  api_commands.rs  general.rs  mod.rs
src/database/: connect.rs
src/events/: listener.rs
src/generators/: fibo.rs  general.rs  mod.rs  num.rs  pi.rs  reddit.rs  structs.rs  weather.rs  youtube.rs
src/helpers/: helpers.rs  mod.rs
