[package]
name = "the-random-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
poise = "0.5.2"
dotenv = "0.15.0"
wikipedia = "0.3.4"
json = "0.12.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
youtube_dl = "0.8.0"
futures = "0.3.26"
mongodb = "2.3.1"
log = "0.4.17"
env_logger = "0.10.0"
roux = "2.2.5"
chrono = "0.4.23"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework", "client", "gateway"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]