[package]
name = "the-random-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
rand = "0.8.5"
serde = "1.0.174"
serde_json = "1.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework", "client", "gateway"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
